--- a/Log-In-&-Sign-In/classic/style.css
+++ b/Log-In-&-Sign-In/classic/style.css
@@ -2,8 +2,9 @@
 :root{
     --bg-color: 120deg, rgba(148, 148, 148, 0.775), rgba(209, 209, 209, 0.678),  white;
     --form-bg-color: white;
-    --hover-bg:rgba(128, 128, 128, 0.819) ;
-    --text-color: rgb(43, 43, 43);
+    --hover-color:rgba(128, 128, 128, 0.819) ;
+    --border-color: black;
+    --text-color: rgb(19, 19, 19);
     --button-bg-color: rgb(193, 193, 193);
 }
 html{
@@ -16,7 +17,7 @@ body{
 }
 /* form styling */
 form{
-    border: solid rgb(8, 6, 6) 1px;
+    border: solid var(--border-color) 1px;
     margin: 10rem auto 3rem auto;
     width: 25%;
     padding: 1rem 2rem;
@@ -27,7 +28,7 @@ form{
 h2{
     font-size: 2rem;
     text-decoration: underline;
-    color: black;
+    color: var(--text-color);
 }
 /* input styling */
 input{
@@ -40,7 +41,7 @@ input{
     color: var(--text-color);
 }
 input:hover{
-    border-bottom-color:rgb(160, 160, 160) ;
+    border-bottom-color:var(--hover-color) ;
 }
 input:nth-of-type(1){
     margin-top: 1.5rem;
@@ -79,11 +80,11 @@ p{
     transition: 300ms;
 }
 button:hover{
-    background-color: var(--hover-bg);
+    background-color: var(--hover-color);
     
 }
 p:hover{
-    color: var(--button-bg-color);
+    color: var(--hover-color);
 }
 
 /* phone sized */
