--- a/Log-In-&-Sign-In/neumorphism/style.css
+++ b/Log-In-&-Sign-In/neumorphism/style.css
@@ -76,7 +76,7 @@ p{
     font-size: 0.8rem;
     display: inline-block;
     text-align: right;
-    color: rgb(22, 22, 22);
+    color: var(--text-color);
     transition: 300ms;
 }
 p:hover{
