--- a/Log-In-&-Sign-In/retro-vintage/style.css
+++ b/Log-In-&-Sign-In/retro-vintage/style.css
@@ -67,14 +67,14 @@ button{
     transition: 300ms;
 }button:hover{
     background-color: var(--hover-bg);
-    color: black;
+    color: var(--text-color);
 }
 /* forgot password styling */
 p{
     font-size: 0.8rem;
     display: inline-block;
     text-align: right;
-    color: rgb(22, 22, 22);
+    color: var(--text-color);
     transition: 300ms;  
 }
 p:hover{
